# Podcastflow-BGM

./: .gitignore  README.md  pyproject.toml
.sdd/: experience.md  project.json  status.json  tasks.json
.sdd/test-reports/: T-030.md
.sdd/tmp/: ui-design-spec.md  visual-research.md
backend/: .env.example  Dockerfile  docker-entrypoint.sh  requirements-prod.txt  requirements.txt
backend/scripts/: init_db.py  log_data_stats.py  migrate_bgm_cover_url.py  migrate_playback_progress.py  migrate_v2_user_id.py  verify_production_persistence.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/core/: config.py  cover_cache.py  ffmpeg.py  ffprobe.py  mix_ffmpeg.py  persistence.py  podcast_stream.py  security.py  (+1 more)
backend/tests/: conftest.py  helpers.py  test_auth.py  test_auth_middleware.py  test_bgm.py  test_db.py  test_health.py  test_mix_ffmpeg.py  test_mixed_audio_delete.py  test_mixed_audio_stream.py  test_mixed_audios.py  test_mixed_audios_batch_delete.py  test_mixed_audios_list.py  test_mixed_audios_regenerate.py  test_persistence.py  test_playback_progress.py  test_podcasts_parse.py  test_preview_streams.py  test_qishui_bgm.py  test_session.py  test_storage.py
docs/: PRD.md  Plan.md  api-contracts.md  deploy.md  startup.md
docs/prototypes/: README.md  detail.html  index.html  library.html
frontend/: .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: generate-pwa-icons.py
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
(+107 files in other folders)
